--- a/src/main/java/com/plter/lrceditor/views/LRCEditor.fxml
+++ b/src/main/java/com/plter/lrceditor/views/LRCEditor.fxml
@@ -2,20 +2,21 @@
 <?import javafx.scene.layout.*?>
 <VBox fx:id="root" style="-fx-padding: 10px" spacing="5" fx:controller="com.plter.lrceditor.controllers.LRCEditorController" xmlns:fx="http://javafx.com/fxml">
     <HBox spacing="5">
-        <Button text="插入时间[00:00]" fx:id="btnInsertTimeTag" onAction="#btnInsertTimeTagActionHandler"/>
         <Button text="打开歌曲" onAction="#btnOpenSongActionHandler"/>
         <Button text="播放" fx:id="btnPlayMp3" disable="true" onAction="#btnPlayMp3ActionHandler"/>
         <Button text="暂停" fx:id="btnPauseMp3" disable="true" onAction="#btnPauseActionHandler"/>
-        <Button text="停止" fx:id="btnStopMp3" disable="true" onAction="#btnStopActionHandler"/>
-        <Button text="保存" onAction="#btnSaveLrcActionHandler"/>
+        <Button text="停止/开始" fx:id="btnStopMp3" disable="true" onAction="#btnStopActionHandler"/>      
     </HBox>
-
-    <HBox spacing="5" style="-fx-alignment: center-left">
-    	<Button text="去掉空白行" onAction="#btnTrimActionHandler"/>
+    <HBox spacing="5">
         <Label text="歌曲标题："/>
-        <TextField/>
+        <TextField fx:id="tfTitle"/>
         <Label text="演唱歌手"/>
-        <TextField/>
+        <TextField/>  
+    </HBox>
+    <HBox spacing="5" style="-fx-alignment: center-left">
+        <Button text="插入时间[00:00]" fx:id="btnInsertTimeTag" onAction="#btnInsertTimeTagActionHandler"/>    
+    	<Button text="去掉空白行" onAction="#btnTrimActionHandler"/>
+        <Button text="保存" onAction="#btnSaveLrcActionHandler"/>
     </HBox>
     <TextArea VBox.vgrow="ALWAYS" fx:id="taTextContent"/>
 
